# ivf-hnsw

./: .gitignore  .gitmodules  .recall_ef.py.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.faiss  Index.cpp  Index.h  IndexIVF_HNSW.cpp  IndexIVF_HNSW.h  IndexIVF_HNSW_Grouping.cpp  IndexIVF_HNSW_Grouping.h  IndexIVF_HNSW_LPQ.cpp  IndexIVF_HNSW_LPQ.h  IndexIVF_HNSW_PQ.cpp  IndexIVF_HNSW_PQ.h  IndexIVF_HNSW_PQ_new.h  L2space.h  L2space_prev.h  LICENSE  Makefile  ModifiedIndex_Artem.h  Parser.h  README.md  brutoforce.h  deep10M_groundtruth1NN.ivecs  deep_10m.cpp  demo_deep1b.cpp  dist_ef.py  distcount_ef.py  gibrid.cpp  gibrid_test.cpp  graphic.py  hnswIndexPQ.h  hnswIndexPQ_new.h  hnswalg (copy).h  hnswalg.h  hnswalg_pq.h  hnswlib.h  hnswquantizer.h  (+18 more)
Examples/: paper_run_deep.sh  paper_run_deep1b_grouping.sh  paper_run_deep_grouping.sh  paper_run_sift.sh  paper_run_sift1b_grouping.sh  paper_run_sift_grouping.sh  run_deep.sh  run_deep1b.sh  run_deep_grouping.sh  run_sift.sh  run_sift1b.sh  run_sift_grouping.sh
data/DEEP1B/: downloadDeep1B.py  load_deep1b.py  load_deep1b.sh
data/SIFT1B/: load_sift1b.sh
docs/: Doxyfile
docs/html/: IndexIVF__HNSW_8h_source.html  IndexIVF__HNSW__Grouping_8h_source.html  Parser_8h_source.html  annotated.html  classes.html  classivfhnsw_1_1StopW-members.html  classivfhnsw_1_1StopW.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  md_README.html  pages.html  structParser-members.html  structParser.html  structivfhnsw_1_1IndexIVF__HNSW-members.html  structivfhnsw_1_1IndexIVF__HNSW.html  structivfhnsw_1_1IndexIVF__HNSW__Grouping-members.html  structivfhnsw_1_1IndexIVF__HNSW__Grouping.html  utils_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  search.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js
examples/: paper_run_deep1b.sh  paper_run_sift1b.sh  paper_run_sift1b_grouping.sh  run_deep1b.sh  run_deep1b_MX.sh  run_deep1b_OPQ.sh  run_deep1b_grouping.sh  run_deep1b_grouping_OPQ.sh  run_deep1b_lpq.sh  run_sift1b.sh  run_sift1b_MX.sh  run_sift1b_OPQ.sh  run_sift1b_grouping.sh  run_sift1b_grouping_OPQ.sh  run_sift1b_lpq.sh
faiss/: CMakeLists.txt  Clustering.cpp  Heap.cpp  IndexFlat.cpp  IndexIVF.cpp  IndexIVFPQ.cpp  IndexPQ.cpp  ProductQuantizer.cpp  VectorTransform.cpp  index_io.cpp  index_io.h  makefile.inc  utils.cpp
faiss/docs/html/: annotated.html  classfaiss_1_1gpu_1_1DeviceTensor.html  classfaiss_1_1gpu_1_1GpuIndex.html  classfaiss_1_1gpu_1_1GpuIndexFlat.html  classfaiss_1_1gpu_1_1GpuIndexFlatIP.html  classfaiss_1_1gpu_1_1GpuIndexFlatL2.html  classfaiss_1_1gpu_1_1GpuIndexIVF.html  classfaiss_1_1gpu_1_1GpuIndexIVFFlat.html  classfaiss_1_1gpu_1_1GpuIndexIVFPQ.html  classfaiss_1_1gpu_1_1HostTensor.html  classfaiss_1_1gpu_1_1IVFFlat.html  classfaiss_1_1gpu_1_1IVFPQ.html  classfaiss_1_1gpu_1_1IndexProxy.html  classfaiss_1_1gpu_1_1StandardGpuResources.html  files.html  hierarchy.html  namespaces.html  structfaiss_1_1Clustering.html  structfaiss_1_1HammingComputer.html  structfaiss_1_1IDSelectorBatch.html  structfaiss_1_1IDSelectorRange.html  structfaiss_1_1IndexFlat.html  structfaiss_1_1IndexFlat1D.html  structfaiss_1_1IndexFlatIP.html  structfaiss_1_1IndexFlatL2.html  structfaiss_1_1IndexFlatL2BaseShift.html  structfaiss_1_1IndexIDMap.html  structfaiss_1_1IndexIDMap2.html  structfaiss_1_1IndexIVF.html  structfaiss_1_1IndexIVFFlat.html  structfaiss_1_1IndexIVFPQ.html  structfaiss_1_1IndexIVFPQCompact.html  structfaiss_1_1IndexIVFPQR.html  structfaiss_1_1IndexIVFScalarQuantizer.html  structfaiss_1_1IndexLSH.html  structfaiss_1_1IndexPQ.html  structfaiss_1_1IndexPreTransform.html  structfaiss_1_1IndexRefineFlat.html  structfaiss_1_1IndexScalarQuantizer.html  structfaiss_1_1IndexShards.html  (+25 more)
faiss/docs/html/search/: search.js
faiss/tests/: demo_imi_pq.cpp
faiss_prev/: VectorTransform.cpp
hnswlib/: CMakeLists.txt  L2space.h  hnswalg.cpp  hnswalg.h  hnswlib.h  visited_list_pool.h
include/: IndexIVF_HNSW.h  Parser.h  utils.h
interface/: .gitignore  index.i  ivfhnsw.i  wrapper.i
prev/: demo_sift1b.cpp  hybrid.cpp  main.cpp  utils.cpp
python-src/ivfhnsw/: .gitignore  __init__.py  index.py  index_grouping.py
python-tests/: test_wrapper.py
src/: Parser.cpp  ivfhnsw.i  utils.cpp
tests/: CMakeLists.txt  demo_deep1b.cpp  demo_ivf-hnsw_deep1b.cpp  demo_ivf-hnsw_grouping_deep1b.cpp  demo_ivf-hnsw_grouping_sift1b.cpp  demo_ivfhnsw_deep1b.cpp  demo_ivfhnsw_deep1b_lpq.cpp  demo_ivfhnsw_grouping_deep1b.cpp  demo_ivfhnsw_grouping_sift1b.cpp  demo_ivfhnsw_sift1b.cpp  demo_ivfhnsw_sift1b_lpq.cpp  demo_sift1b.cpp  test_dummy.cpp  test_ivfhnsw_deep1b.cpp  test_ivfhnsw_grouping_deep1b.cpp  test_ivfhnsw_grouping_sift1b.cpp  test_ivfhnsw_sift1b.cpp
